--- a/public/css/style-landing.css
+++ b/public/css/style-landing.css
@@ -4,11 +4,8 @@
     box-sizing: border-box;
   }
   .container {
-    width: 100%;
-    height: 100vh;
+
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
     position: relative;
   }
@@ -19,7 +16,6 @@
     
     /* 
     width: 80%;
-    height: 70%;
     background-color: #fff;
     display: flex;
     flex-direction: column;
@@ -29,16 +25,21 @@
 
     background-color: #fff;
     width: 90%;
-    max-width: 1200px;
-    margin: 40px auto;
-    padding: 40px;
+    
     
     box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
   }
 
+  @media (max-width: 768px) {
+    .card {
+      margin-top: 100%;
+    }
+  }
+
+  
   .fondo{
     width: 110%;
-    height: 110%;
+    height: 100%;
     pointer-events: none;
   }
 
