--- a/public/css/style-landing.css
+++ b/public/css/style-landing.css
@@ -3,54 +3,39 @@
     padding: 0;
     box-sizing: border-box;
   }
-  .container {
 
+  .container-custom {
+    min-height: 100vh;
+    height: 100vh;
+    max-height: 100vh;
+    width: 80%;
     display: flex;
     align-items: center;
+    justify-content: center;
+    margin: auto;
+    background-color: blue;
+  }
+
+  .fondo{
+    width: 100%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #25d366;
     position: relative;
   }
 
-  .card{
-    position: absolute;
-    border-radius: 35px;
-    
-    /* 
-    width: 80%;
-    background-color: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    */
+  .f{ position: relative; }
 
-    background-color: #fff;
-    width: 90%;
-    
-    
-    box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
-  }
-
-  @media (max-width: 768px) {
-    .card {
-      margin-top: 100%;
-    }
-  }
-
-  
-  .fondo{
-    width: 110%;
-    height: 100%;
-    pointer-events: none;
-  }
-
-  .fondo .fondo-1{
+  .f .fondo-1{
     display: flex;
     justify-content: start;
     height: 50%;
     width: 100%;
   }
 
-  .fondo .fondo-2{
+  .f .fondo-2{
     display: flex;
     justify-content: end;
     width: 100%;
