--- a/public/css/page/style.css
+++ b/public/css/page/style.css
@@ -77,6 +77,7 @@ nav.navbar.navbar-expand-lg {
   padding: 10px 0;
 }
 
+
 .custom_nav-container.navbar-expand-lg .navbar-nav .nav-link {
   padding: 10px 20px;
   color: #2d2c2c;
@@ -87,6 +88,20 @@ nav.navbar.navbar-expand-lg {
 
 .custom_nav-container.navbar-expand-lg .navbar-nav .nav-item.active .nav-link {
   color: #232323;
+}
+
+@media (min-width: 0) and (max-width: 993px) {
+  .custom_nav-container.navbar-expand-lg .navbar-nav .nav-link {
+    padding: 10px 20px;
+    color: #fec913;
+    font-size: 15px;
+    text-align: center;
+    text-transform: uppercase;
+  }
+  
+  .custom_nav-container.navbar-expand-lg .navbar-nav .nav-item.active .nav-link {
+    color: #fec913;
+  }
 }
 
 a,
@@ -107,26 +122,24 @@ a:focus {
 }
 
 
-@media (max-width: 993px) {
+@media (min-width: 0) and (max-width: 993px) {
 
   .top_container {
     content: "";
     position: relative;
     width: 100%;
     height: 200%;
+    
     background: url(../../images/hero-bg.png);
+    background-color: #082465;
     
-    
-    background-size: 100%;
+    background-size: 500%;
     background-position: left top;
     background-repeat: no-repeat;
   }
 }
 
 @media (min-width: 993px) and (max-width: 1250px) {
-  .top_container {
-    height: 60%vh;
-  }
   .top_container {
     position: relative;
     width: 100%;
@@ -140,9 +153,6 @@ a:focus {
 
 @media (min-width: 1250px) and (max-width: 1800px) {
   .top_container {
-    height: 60%vh;
-  }
-  .top_container {
     position: relative;
     width: 100%;
     
@@ -154,9 +164,6 @@ a:focus {
 }
 
 @media (min-width: 1800px) and (max-width: 2000px) {
-  .top_container {
-    height: 60%vh;
-  }
   .top_container {
     position: relative;
     width: 100%;
@@ -192,10 +199,11 @@ a:focus {
 .top_container_dos::before {
   content: "";
   position: absolute;
-  width: 48%;
+  width: 100%;
   height: 100%;
   background: url(../../images/hero-bg.png);
   background-size: cover;
+  
   background-position: right bottom;
   background-repeat: no-repeat;
   z-index: -1;
@@ -278,12 +286,36 @@ a:focus {
   color: #fefeff;
 }
 
-.hero_detail-box h1 {
-  text-transform: uppercase;
-  font-size: 50px;
-  color: #fec913;
-  font-weight: bold;
+
+
+
+@media (min-width: 0) and (max-width: 993px) {
+
+  .hero_detail-box h1 {
+    text-transform: uppercase;
+    font-size: 40px;
+    color: #fec913;
+    font-weight: bold;
+  }
+
+  .hero_detail-box p {
+    width: 100%;
+  }
 }
+
+@media(min-width: 993px) {
+  .hero_detail-box h1 {
+    text-transform: uppercase;
+    font-size: 50px;
+    color: #fec913;
+    font-weight: bold;
+  }
+
+  .hero_detail-box p {
+    width: 90%;
+  }
+}
+
 
 
 .hero_detail-box p {
@@ -387,9 +419,6 @@ a:focus {
   width: 100%;
 }
 
-
-
-
 /* end client section */
 
 
@@ -397,7 +426,7 @@ a:focus {
 .contact_section {
   background-image: url(../../images/shape-2.png);
   background-repeat: no-repeat;
-  background-size: 14%;
+  background-size: 190px;
   background-position: left center;
 }
 
@@ -530,4 +559,19 @@ a:focus {
   font-size:30px;
   box-shadow: 2px 2px 3px #999;
   z-index:100;
+}
+
+.float_dos{
+  position:fixed;
+  width:60px;
+  height:60px;
+  bottom:110px;
+  right:40px;
+  background-color:#cc38d1;
+  color:#FFF;
+  border-radius:50px;
+  text-align:center;
+  font-size:30px;
+  box-shadow: 2px 2px 3px #999;
+  z-index:99;
 }
