--- a/public/css/page/style.css
+++ b/public/css/page/style.css
@@ -358,15 +358,20 @@ a:focus {
   opacity: 1;
 }
 
-.vehicle_section .carousel-control-prev-icon,
-.vehicle_section .carousel-control-next-icon {
-  width: 50px;
-  height: 50px;
-  background-color: #082465;
-  border-radius: 100%;
-  background-size: 10px;
-  background-position: center;
+@media (min-width: 993px) {
+
+  .vehicle_section .carousel-control-prev-icon,
+  .vehicle_section .carousel-control-next-icon {
+    width: 50px;
+    height: 50px;
+    margin-top: -120px;
+    background-color: #082465;
+    border-radius: 100%;
+    background-size: 10px;
+    background-position: center;
+  }
 }
+
 
 .vehicle_section .carousel-control-prev-icon {
   background-image: url(../../images/prev.png);
