--- a/public/css/page/style.css
+++ b/public/css/page/style.css
@@ -358,6 +358,14 @@ a:focus {
   opacity: 1;
 }
 
+@media (min-width: 0) and (max-width: 993px) {
+
+  .vehicle_section .carousel-control-prev-icon,
+  .vehicle_section .carousel-control-next-icon {
+    display: none;
+  }
+}
+
 @media (min-width: 993px) {
 
   .vehicle_section .carousel-control-prev-icon,
